Refactored admin portal, added extra features